src/scss/forms/_form-password.scss
@use '../base/config' as *;
@use '../base/variables' as *;

.password-icon {
  position: absolute;
  top: calc(var(--#{$prefix}form-control-spacing) * 4);
  right: var(--#{$prefix}form-control-spacing);
  z-index: 10;
  padding: var(--#{$prefix}spacing-xxs);
  background-color: var(--#{$prefix}form-control-background-color);
  cursor: pointer;

  .icon {
    fill: var(--#{$prefix}icon-primary);
  }
}

.password-meter {
  bottom: -12px;
  left: 0;
  width: 100%;
  max-width: 200px;
  height: 4px;

  .col-3 {
    height: 4px;
  }
}

.password-caps {
  display: none;
  &.show {
    display: block;
  }
}

